tests/fail/exponential_underuse.is
let x : Wrap Bool = wrap true;
@[0] x
